@@ -1,0 +1,9 @@
+[Core]
+Name = default_filters
+Module = default_filters
+
+[Documentation]
+Author = Roberto Alsina
+Version = 1.0
+Website = https://getnikola.com/
+Description = Register default filters
