@@ -4,6 +4,8 @@ New in master
 Features
 --------
 
+* Allowing to register filters from plugins, and allowing to specify default
+  filters as strings of the form ``filters.<name>`` (part of Issue #2475)
 * Support ignoring assets via ``ignore_assets`` theme meta field
   (Issue #2812)
 * Ignore unused Colorbox locales (Issue #2812)
